[Arjun] Refactored: addCollabrator and removeCollabrator using search api
